[gd_scene load_steps=5 format=2]

[ext_resource path="res://Products/DvdBox/Kawai/dvdbox.glb" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Barcode.tscn" type="PackedScene" id=3]
[ext_resource path="res://Products/Package.gd" type="Script" id=4]

[sub_resource type="BoxShape" id=4]

[node name="Package" type="KinematicBody"]
script = ExtResource( 4 )
tween_np = NodePath("Tween")
barcode_placeholder_np = NodePath("RotationRoot/BarcodesPlaceholder")

[node name="Tween" type="Tween" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.8, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 4 )

[node name="RotationRoot" type="Spatial" parent="."]

[node name="PackageVisualPlaceholder" type="Spatial" parent="RotationRoot"]

[node name="dvdbox" parent="RotationRoot/PackageVisualPlaceholder" instance=ExtResource( 1 )]

[node name="BarcodesPlaceholder" type="Spatial" parent="RotationRoot"]

[node name="FrontBarcode" parent="RotationRoot/BarcodesPlaceholder" instance=ExtResource( 3 )]
transform = Transform( 0.812572, 0, 0.58286, 0, 1, 0, -0.58286, 0, 0.812572, -0.437598, 0.106424, -0.686112 )

[node name="BackBarcode" parent="RotationRoot/BarcodesPlaceholder" instance=ExtResource( 3 )]
transform = Transform( -0.999922, -1.09246e-09, -0.0124963, 0, -1, 8.74228e-08, -0.0124963, 8.7416e-08, 0.999922, 0.0495687, -0.103845, -0.0877775 )

[node name="LeftBarcode" parent="RotationRoot/BarcodesPlaceholder" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 1.00296, -0.259537, 0.329227 )
visible = false

[node name="RightBarcode" parent="RotationRoot/BarcodesPlaceholder" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, -1, 4.37114e-08, 0, -4.37114e-08, -1, 1, -4.37114e-08, 1.91069e-15, -1.02216, -0.259537, 0.329227 )
visible = false

[node name="TopBarcode" parent="RotationRoot/BarcodesPlaceholder" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.00702667, -0.259537, 1.00147 )
visible = false

[node name="BottomBarcode" parent="RotationRoot/BarcodesPlaceholder" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.564323, 0.299452, -1.01198 )
visible = false

[connection signal="input_event" from="." to="." method="_on_Package_input_event"]
[connection signal="clicked" from="RotationRoot/BarcodesPlaceholder/FrontBarcode" to="." method="_on_Barcode_clicked"]
[connection signal="scan_error" from="RotationRoot/BarcodesPlaceholder/FrontBarcode" to="." method="_on_Barcode_scan_error"]
[connection signal="scanned" from="RotationRoot/BarcodesPlaceholder/FrontBarcode" to="." method="_on_Barcode_scanned"]
[connection signal="clicked" from="RotationRoot/BarcodesPlaceholder/BackBarcode" to="." method="_on_Barcode_clicked"]
[connection signal="scan_error" from="RotationRoot/BarcodesPlaceholder/BackBarcode" to="." method="_on_Barcode_scan_error"]
[connection signal="scanned" from="RotationRoot/BarcodesPlaceholder/BackBarcode" to="." method="_on_Barcode_scanned"]
[connection signal="clicked" from="RotationRoot/BarcodesPlaceholder/LeftBarcode" to="." method="_on_Barcode_clicked"]
[connection signal="scan_error" from="RotationRoot/BarcodesPlaceholder/LeftBarcode" to="." method="_on_Barcode_scan_error"]
[connection signal="scanned" from="RotationRoot/BarcodesPlaceholder/LeftBarcode" to="." method="_on_Barcode_scanned"]
[connection signal="clicked" from="RotationRoot/BarcodesPlaceholder/RightBarcode" to="." method="_on_Barcode_clicked"]
[connection signal="scan_error" from="RotationRoot/BarcodesPlaceholder/RightBarcode" to="." method="_on_Barcode_scan_error"]
[connection signal="scanned" from="RotationRoot/BarcodesPlaceholder/RightBarcode" to="." method="_on_Barcode_scanned"]
[connection signal="clicked" from="RotationRoot/BarcodesPlaceholder/TopBarcode" to="." method="_on_Barcode_clicked"]
[connection signal="scan_error" from="RotationRoot/BarcodesPlaceholder/TopBarcode" to="." method="_on_Barcode_scan_error"]
[connection signal="scanned" from="RotationRoot/BarcodesPlaceholder/TopBarcode" to="." method="_on_Barcode_scanned"]
[connection signal="clicked" from="RotationRoot/BarcodesPlaceholder/BottomBarcode" to="." method="_on_Barcode_clicked"]
[connection signal="scan_error" from="RotationRoot/BarcodesPlaceholder/BottomBarcode" to="." method="_on_Barcode_scan_error"]
[connection signal="scanned" from="RotationRoot/BarcodesPlaceholder/BottomBarcode" to="." method="_on_Barcode_scanned"]
